- restructured to use maven/module  - implemented UT  - implemented IT

--- a/deleteRDirectory-core/src/properties/mvn-compiler.properties
+++ b/deleteRDirectory-core/src/properties/mvn-compiler.properties
@@ -10,4 +10,4 @@ maven.compiler.meminitial=64m
 maven.compiler.optimize=true
 maven.compiler.showDeprecation=true
 maven.compiler.showWarnings=true
-maven.compiler.main.skip=false
+maven.main.skip=false
