--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.com.owl.utils</groupId>
 	<artifactId>deleteRDirectory</artifactId>
-	<version>0.0.1</version>
+	<version>1.0.1</version>
+	<packaging>pom</packaging>
 	<properties>
-		<!-- CONFIGURATION -->
-		<directory>C:\.tmp\mvn\${project.artifactId}\target</directory>
-		
 		<!-- PLUGINS VERSION -->
 		<version-maven-compiler-plugin>3.6.1</version-maven-compiler-plugin>
 		<version.maven-resources-plugin>3.0.1</version.maven-resources-plugin>
@@ -19,29 +17,43 @@
 		<version.maven-ear-plugin>2.10.1</version.maven-ear-plugin>
 		<version.sonar-maven-plugin>3.2</version.sonar-maven-plugin>
 		<version.properties-maven-plugin>1.0.0</version.properties-maven-plugin>
-		
+		<version.version.build-helper-maven-plugin>3.0.0</version.version.build-helper-maven-plugin>
+		<version.maven-failsafe-plugin>2.20</version.maven-failsafe-plugin>
 		<!-- DEPENDENCY VERSION -->
 		<version.junit>4.12</version.junit>
 		<version.mockito-all>1.10.19</version.mockito-all>
 	</properties>
+	<modules>
+		<module>deleteRDirectory-core</module>
+		<module>deleteRDirectory-SE</module>
+		<module>deleteRDirectory-test-integration</module>
+	</modules>
 	<dependencyManagement>
 		<dependencies>
+			<!-- MODULES -->
+			<dependency>
+				<groupId>org.com.owl.utils</groupId>
+				<artifactId>deleteRDirectory-core</artifactId>
+				<version>1.0.1</version>
+			</dependency>
+			<!-- DEPENDENCY - SYSTEM -->
+			<!-- DEPENDENCY - PROVIDE -->
+			<!-- DEPENDENCY - COMPILE -->
+			<!-- DEPENDENCY - TEST -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${version.junit}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>${version.mockito-all}</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${version.junit}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>${version.mockito-all}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -54,23 +66,96 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${version-maven-compiler-plugin}</version>
+					<configuration>
+						<encoding>${project.build.sourceEncoding}</encoding>
+						<source>${maven.compiler.source}</source>
+						<target>${maven.compiler.target}</target>
+						<fork>${maven.compiler.fork}</fork>
+						<debug>${maven.compiler.debug}</debug>
+						<debuglevel>${maven.compiler.debuglevel}</debuglevel>
+						<failOnError>${maven.compiler.failOnError}</failOnError>
+						<failOnWarning>${maven.compiler.failOnWarning}</failOnWarning>
+						<maxmem>${maven.compiler.maxmem}</maxmem>
+						<meminitial>${maven.compiler.meminitial}</meminitial>
+						<optimize>${maven.compiler.optimize}</optimize>
+						<showDeprecation>${maven.compiler.showDeprecation}</showDeprecation>
+						<showWarnings>${maven.compiler.showWarnings}</showWarnings>
+						<skipMain>${maven.compiler.main.skip}</skipMain>
+					</configuration>
+					<executions>
+						<!--eclipse do not support duplicated package-info.java, in both src and test. -->
+						<execution>
+							<id>default-testCompile</id>
+							<phase>test-compile</phase>
+							<configuration>
+								<testExcludes>
+									<exclude>**/package-info.java</exclude>
+								</testExcludes>
+							</configuration>
+							<goals>
+								<goal>testCompile</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>build-helper-maven-plugin</artifactId>
+					<version>${version.build-helper-maven-plugin}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>${version.maven-resources-plugin}</version>
-					<configuration>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>${version-maven-dependency-plugin}</version>
+					<executions>
+						<execution>
+							<id>copy-dependencies</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>copy-dependencies</goal>
+							</goals>
+							<configuration>
+								<includeScope>${config.includeScope}</includeScope>
+								<outputDirectory>${config.outputDirectory}</outputDirectory>
+								<overWriteReleases>${config.overWriteReleases}</overWriteReleases>
+								<overWriteSnapshots>${config.overWriteSnapshots}</overWriteSnapshots>
+								<overWriteIfNewer>${config.overWriteIfNewer}</overWriteIfNewer>
+							</configuration>
+						</execution>
+						<execution>
+							<id>copy-dependencies-to-target</id>
+							<phase>package</phase>
+							<goals>
+								<goal>copy-dependencies</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>${version.maven-jar-plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>${version.maven-failsafe-plugin}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>integration-test</goal>
+								<goal>verify</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -86,134 +171,14 @@
 						</goals>
 						<configuration>
 							<files>
-								<file>src/properties/mvn-configuration.properties</file>
-								<file>src/properties/mvn-compiler.properties</file>
-								<file>src/properties/mvn-jar.properties</file>
-								<file>src/properties/sonarqube.properties</file>
+								<file>${basedir}/src/properties/mvn-configuration.properties</file>
+								<file>${basedir}/src/properties/mvn-compiler.properties</file>
+								<file>${basedir}/src/properties/sonarqube.properties</file>
 							</files>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
-					<source>${maven.compiler.source}</source>
-					<target>${maven.compiler.target}</target>
-					<fork>${maven.compiler.fork}</fork>
-					<debug>${maven.compiler.debug}</debug>
-					<debuglevel>${maven.compiler.debuglevel}</debuglevel>
-					<failOnError>${maven.compiler.failOnError}</failOnError>
-					<failOnWarning>${maven.compiler.failOnWarning}</failOnWarning>
-					<maxmem>${maven.compiler.maxmem}</maxmem>
-					<meminitial>${maven.compiler.meminitial}</meminitial>
-					<optimize>${maven.compiler.optimize}</optimize>
-					<showDeprecation>${maven.compiler.showDeprecation}</showDeprecation>
-					<showWarnings>${maven.compiler.showWarnings}</showWarnings>
-					<skipMain>${maven.main.skip}</skipMain>
-				</configuration>
-				<executions>
-					<!--eclipse do not support duplicated package-info.java, in both src and test. -->
-					<execution>
-						<id>default-testCompile</id>
-						<phase>test-compile</phase>
-						<configuration>
-							<testExcludes>
-								<exclude>**/package-info.java</exclude>
-							</testExcludes>
-						</configuration>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<includeScope>${config.includeScope}</includeScope>
-							<outputDirectory>${config.outputDirectory}</outputDirectory>
-							<overWriteReleases>${config.overWriteReleases}</overWriteReleases>
-							<overWriteSnapshots>${config.overWriteSnapshots}</overWriteSnapshots>
-							<overWriteIfNewer>${config.overWriteIfNewer}</overWriteIfNewer>
-						</configuration>
-					</execution>
-					<execution>
-						<id>copy-dependencies-to-target</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/dependencies</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<outputDirectory>${mvn.jar.outputDirectory}</outputDirectory>
-					<archive>
-						<manifest>
-							<addClasspath>${mvn.jar.manifest.addClasspath}</addClasspath>
-							<mainClass>${mvn.jar.manifest.mainClass}</mainClass>
-							<classpathPrefix>${mvn.jar.manifest.classpathPrefix}</classpathPrefix>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>${mvn.assembly.addClasspath}</addClasspath>
-							<mainClass>${mvn.assembly.mainClass}</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>${mvn.assembly.descriptorRef}</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-				<executions>
-					<execution>
-						<id>jar-with-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>sonar-maven-plugin</artifactId>
-				<version>${version.sonar-maven-plugin}</version>
-				<executions>
-					<execution>
-						<id>sonar-${version.sonar-maven-plugin}</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>sonar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			 -->
 		</plugins>
 	</build>
 </project>
